<resources>
    <string name="app_name">Open Weather App</string>
    <string name="st_paul_mn">St.Paul, MN</string>
    <string name="temperature">%1$.0f°</string>
    <string name="feels_like">Feels Like %1$.0f°</string>
    <string name="low">Low %1$.0f°</string>
    <string name="high">High %1$.0f°</string>
    <string name="humidity">Humidity %1$.0f%%</string>
    <string name="pressure">Pressure %1$d hPa</string>

    <string name="forecast">Forecast</string>


    <string name="current_conditions">Current Conditions</string>
    <string name="zip_code">Zip Code</string>
    <string name="search">Search</string>
    <string name="conditionIcon">conditionIcon</string>

    <string name="temp">%1$.0f°</string>

    <string name="sunrise">Sunrise: %1$s</string>
    <string name="sunset">Sunset: %1$s</string>
    <string name="request">RequestButton</string>

    <string name="channelName">Reminders</string>
    <string name="channelDescription">Reminders you\'ve added</string>


</resources>