<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st_paul_mn"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/temprature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="72sp"
        android:textColor="@color/black"
        android:layout_marginStart="48dp"
        android:text="@string/temperature"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        app:layout_constraintStart_toStartOf="parent"

        />
    <ImageView
        android:id="@+id/condition_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/sun"
        android:layout_marginStart="48dp"
        android:scaleType="center"
        android:contentDescription="@null"
        android:importantForAccessibility="@null"
        app:layout_constraintTop_toTopOf="@id/temprature"
        app:layout_constraintBottom_toBottomOf="@id/temprature"
        app:layout_constraintStart_toEndOf="@id/temprature"
        />
    <TextView
        android:id="@+id/feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Feels like 78°"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/temprature"
        app:layout_constraintStart_toStartOf="@id/temprature"
        app:layout_constraintEnd_toEndOf="@id/temprature"
        />
    <TextView
        android:id="@+id/low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/temprature"
        app:layout_constraintTop_toBottomOf="@id/feels_like"

        />
    <TextView
        android:id="@+id/high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high"
        android:layout_marginTop="6dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/temprature"
        app:layout_constraintTop_toBottomOf="@id/low"

        />
    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:layout_marginTop="6dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/temprature"
        app:layout_constraintTop_toBottomOf="@id/high"

        />
    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:layout_marginTop="6dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/temprature"
        app:layout_constraintTop_toBottomOf="@id/humidity"

        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="48dp"
        android:text="Forecast"


        app:layout_constraintStart_toStartOf="@id/temprature"
        app:layout_constraintTop_toBottomOf="@id/pressure" />


</androidx.constraintlayout.widget.ConstraintLayout>